<resources>
    <string name="app_name">ICM_Projeto1_93179_93391</string>
    <string name="app_title">Tracking App</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_user_stats">User stats</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="log_in_button">Log In</string>
    <string name="service_login_divider">Or connect with</string>
    <string name="sign_divider">Don\'t have an account?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="username_hint">Username:</string>
    <string name="confirm_password_hint">Confirm password:</string>
    <string name="info_start_follow_button">Open</string>
    <string name="course_name_data">Track name:</string>
    <string name="owner_name_data">Runner name:</string>
    <string name="unknown_data">Unknown</string>
    <string name="date_uploaded_data">Date uploaded:</string>
    <string name="length_data">Length:</string>
    <string name="runtime_data">Runtime:</string>
    <string name="rating_data">Rating:</string>
    <string name="distance_data">Distance away:</string>
    <string name="max_speed_data">Maximum speed:</string>
    <string name="avg_speed_data">Average speed:</string>
    <string name="copy_courses_title">Runs on this track:</string>
    <string name="logout_button">Logout</string>
    <string name="tracking_button">Free Run</string>
    <string name="courses_list_button">Tracks</string>
    <string name="user_stats_button">User Stats</string>
    <string name="unknown">Unknown</string>
    <string name="course_name_hint">Track name:</string>
    <string name="private_button">Private</string>
    <string name="public_button">Public</string>
    <string name="radio_error">Must select one</string>
    <string name="anonymous_text">Anonymous</string>
    <string name="confirm_button">Confirm</string>
    <string name="username_data">Name:</string>
    <string name="top_score_data">Top Score:</string>
    <string name="track_count_data">Track Count:</string>
    <string name="total_track_length_data">Total track length:</string>
    <string name="total_runtime_data">Total Runtime:</string>
    <string name="first_time_login_text">First time login.\nPlease insert username:</string>
    <string name="courselistactivity">Tracks</string>
    <string name="courseinfoactivity">Track info</string>
    <string name="followingactivity">Tracking</string>
    <string name="trackingactivity">Free Run</string>
    <string name="settings_button">Settings</string>
    <string name="settingsactivity">Settings</string>
    <string name="theme_switch">Night mode</string>
</resources>