<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenuActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/app_title"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="0.3"/>

    <LinearLayout
        android:id="@+id/menu_buttons"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="64dp"
        android:layout_weight="0.7"
        android:gravity="center_vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/free_play"
            android:text="@string/tracking_button"
            android:onClick="free_play_onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courses"
            android:text="@string/courses_list_button"
            android:onClick="courses_onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_stats"
            android:text="@string/user_stats_button"
            android:onClick="user_stats_onClick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/logoutbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/logout_button"
                android:onClick="logoutbutton_onClick"/>

            <View
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/settingsbutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/settings_button"
                android:onClick="settingbutton_onClick"/>
        </LinearLayout>


        <!--<Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/friends"
            android:text="Friends" />-->
    </LinearLayout>
</LinearLayout>