<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UsernamePopupActivity"
    android:background="?attr/colorOnPrimary"
    android:minWidth="300dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/servicesignpopup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:text="@string/first_time_login_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_box"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        app:layout_constraintTop_toBottomOf="@+id/servicesignpopup_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp">
        <!-- width is 268 because match_parent wasn't working-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm_username_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        app:layout_constraintTop_toBottomOf="@id/user_name_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>