<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/course_item"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/course_name_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/course_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/owner_name_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/owner_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/date_uploaded_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/date_uploaded"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/length_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/course_length"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/runtime_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/course_runtime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rating_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/course_rating"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

</LinearLayout>
