<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/course_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:colorBackground"
        android:elevation="4dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserStatsActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/username_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/top_score_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/user_top_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/track_count_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/user_track_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/total_track_length_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/user_total_track_length"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/total_runtime_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/user_total_runtime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/avg_speed_data"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#858585"
            />
        <TextView
            android:id="@+id/user_average_speed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unknown_data"
            android:gravity="right"
            android:layout_weight="1"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
</ScrollView>
</LinearLayout>